bug #63923: sr=sfraser, r=waterson (aka ``thrill-kitty''), casting to an abstract base prevents people on crack-baby platforms from using an |NS_LITERAL_STRING| (incompatibly) as an |nsAutoString|.  Who's ready for a full rebuild?